--- a/LeckerBag/WebContent/11_lieferant_bestellungen_alle.html
+++ b/LeckerBag/WebContent/11_lieferant_bestellungen_alle.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>      
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
         <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
@@ -34,7 +34,7 @@
 					 document.getElementById("leckerbags").style.display = "";
 				 }
 			};
-		</script>           
+		</script>         
     </head>     
     <body> 
         <div class="row" id="header" data-pg-collapsed></div>         
@@ -44,12 +44,12 @@
                     <div class="row" data-pg-collapsed>
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Meine Bestellungen</h3> 
-                            <p>Hier können Sie die eingegangen Bestellungen einsehen&nbsp;</p>
+                            <p>Hier kannst du die eingegangen Bestellungen einsehen&nbsp;</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -341,11 +341,11 @@
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12 dash_element_ext_meine_details">
                                     <h4>Meine weiteren Deitails</h4>
-                                    <div class="row pg-empty-placeholder">
+                                    <div class="row">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                             <select class="form-control" id="meine_details_bestellungen" data-pg-name="Dropdown: Geschlecht">
                                                 <option value="1">Alle belegten Brötchen</option>
-                                                <option value="2">Alle LeckerBags</option>                                                
+                                                <option value="2">Alle LeckerBags</option>                                                 
                                             </select>                                             
                                         </div>
                                     </div>                                     
@@ -1168,6 +1168,6 @@
         <div class="row" id="footer" data-pg-collapsed></div>         
         <!-- Ende des Dokumentes -->         
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
-        <script src="js/functions.js"></script>        
+        <script src="js/functions.js"></script>         
     </body>     
 </html>
