--- a/LeckerBag/WebContent/12_lieferant_guthaben_alle.html
+++ b/LeckerBag/WebContent/12_lieferant_guthaben_alle.html
@@ -26,12 +26,12 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Meine Kundenguthaben</h3> 
-                            <p>Hier können Sie alle bestehenden Kundenguthaben einsehen</p>
+                            <p>Hier kannst du alle bestehenden Kundenguthaben einsehen</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -133,22 +133,22 @@
                                                         </thead>
                                                         <tbody> 
                                                             <tr data-pg-collapsed=""> 
-                                                                <td>Bob Brown &nbsp; &nbsp; &nbsp; &nbsp;</td>                                                                 
+                                                                <td>Heike Schmidt &nbsp; &nbsp; &nbsp; &nbsp;</td>                                                                 
                                                                 <td>08,30€</td>                                                                 
                                                                 <td>19.06.2015</td>                                                                 
                                                             </tr>
                                                             <tr data-pg-collapsed=""> 
-                                                                <td>Bob Brown</td>                                                                 
+                                                                <td>Heike Schmidt</td>
                                                                 <td>08,30€</td>                                                                 
                                                                 <td>19.06.2015</td>                                                                 
                                                             </tr>
                                                             <tr data-pg-collapsed=""> 
-                                                                <td>Bob Brown</td>                                                                 
+                                                                <td>Heike Schmidt</td>
                                                                 <td>08,30€</td>                                                                 
                                                                 <td>19.06.2015</td>                                                                 
                                                             </tr>
                                                             <tr data-pg-collapsed=""> 
-                                                                <td>Bob Brown</td>                                                                 
+                                                                <td>Heike Schmidt</td>
                                                                 <td>08,30€</td>                                                                 
                                                                 <td>19.06.2015</td>                                                                 
                                                             </tr>
