--- a/LeckerBag/WebContent/1_details_abo.html
+++ b/LeckerBag/WebContent/1_details_abo.html
@@ -26,12 +26,12 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Details des Abonnement</h3> 
-                            <p>&nbsp;Hier können Sie die Details des ausgewählten Abonnements einsehen</p>
+                            <p>&nbsp;Hier kannst du die Details des ausgewählten Abonnements einsehen</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                &nbsp;
+                        </li>                                                                                                                                                                                                                                                &nbsp;
                         <li>&nbsp;Details des Abonnement &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -60,7 +60,7 @@
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kunden</h4> 
-                                                    <p>Name Maria Müller<br></p>
+                                                    <p>Name: Heike Schmidt<br></p>
                                                     <p>Straße: Weingartenstraße 31<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
@@ -68,15 +68,15 @@
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Lieferanten</h4> 
-                                                    <p>Name: Bäcker Bob<br></p>
+                                                    <p>Name: Sandertorbäck<br></p>
                                                     <p>Straße: Sanderstraße 12<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kind</h4> 
-                                                    <p>Name: Hans-Jürgen<br></p>
-                                                    <p>Schule: Gebrüder Grimm Schule<br></p>
-                                                    <p>Klasse: 2a<br></p>
+                                                    <p>Name: Lena<br></p>
+                                                    <p>Schule: Grundschule-Süd<br></p>
+                                                    <p>Klasse: 2b<br></p>
                                                 </div>
                                             </div>
                                             <div class="row" style="margin-top: 30px">
@@ -110,7 +110,7 @@
                                                             <strong><strong></strong></strong>
                                                         </div>
                                                         <strong><strong><div class="col-md-2 col-lg-2" style="margin-bottom: 20px">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" href="bestellung_kunde_s2.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" onclick="location.href='bestellung_kunde_s2.html'">
                                                                         <i class="glyphicon glyphicon-pencil"></i>
                                                                     </button>                                                                     
                                                                 </div></strong></strong>
@@ -126,10 +126,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -143,10 +143,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -160,10 +160,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -177,10 +177,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -194,10 +194,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -211,10 +211,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
@@ -228,10 +228,10 @@
                                                                     <p>Getränk: Wasser<br></p>
                                                                 </div>
                                                                 <div class="col-md-2 col-lg-2" style="margin-top: 20px;">
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='4_stornierung_bag.html'">
                                                                         <i class="glyphicon glyphicon-trash"></i>
                                                                     </button>
-                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" href="3_details_bestellung.html">
+                                                                    <button type="button" class="btn btn-default btn_icon btn_icon" style="margin-bottom: 20px" onclick="location.href='3_details_bestellung.html'">
                                                                         <i class="glyphicon glyphicon-search"></i>
                                                                     </button>                                                                     
                                                                 </div>
