--- a/LeckerBag/WebContent/4_stornierung_bag.html
+++ b/LeckerBag/WebContent/4_stornierung_bag.html
@@ -25,13 +25,13 @@
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed="">
-                            <h3>Ihre Stornierung</h3> 
-                            <p>&nbsp;Hier können Sie das ausgewählte Leckerbag stornieren</p>
+                            <h3>Stornierung</h3> 
+                            <p>&nbsp;Hier kannst du das ausgewählte Leckerbag stornieren</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -44,8 +44,8 @@
                         </li>
                         <li>&nbsp;
                             <a href="1_details_abo.html">Details des Abonnement&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                                                                                    &nbsp;
-                        <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
+                        </li>                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
+                        <li>&nbsp;Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
@@ -61,16 +61,16 @@
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                                             <h4>Details zum Lieferanten<br></h4> 
-                                            <p>Name: Bäcker Bob<br></p>
+                                            <p>Name: Sandertorbäck<br></p>
                                             <p>Straße: Sanderstraße 12<br></p>
                                             <p>Postleitzahl: 97072 Würzburg<br></p>
                                             <p class="hidden-xs"><br></p>
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12" data-pg-collapsed="">
                                             <h4>Details zum Kind</h4> 
-                                            <p>Name: Hans-Jürgen<br></p>
-                                            <p>Schule: Grimm Schule<br></p>
-                                            <p>Klasse: 2a</p>
+                                            <p>Name: Lena<br></p>
+                                            <p>Schule: Grundschule-Süd<br></p>
+                                            <p>Klasse: 2b</p>
                                         </div>
                                     </div>
                                     <div class="row" data-pg-collapsed="">
@@ -100,7 +100,7 @@
                                                     <i class="fa fa-lg logo_info fa-check-circle"></i> 
                                                 </div>
                                                 <div class="col-md-11 col-lg-11 col-sm-11 col-xs-11">
-                                                    <p>Der ausstehende Betrag wurde bereits beglichen..<br></p>
+                                                    <p>Der ausstehende Betrag wurde bereits beglichen.<br></p>
                                                 </div>
                                                 <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1 text-right">
                                                     <i class="fa fa-info-circle fa-lg logo_info"></i> 
@@ -111,7 +111,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='1_details_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='1_details_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Stornieren</button>
                                         </div>
                                     </div>                                     
