--- a/LeckerBag/WebContent/6_rezension_abo.html
+++ b/LeckerBag/WebContent/6_rezension_abo.html
@@ -25,13 +25,13 @@
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed="">
-                            <h3>Ihre Rezension</h3> 
-                            <p>&nbsp;Hier können Sie eine Rezension zum ausgewählten Abonnement abgeben</p>
+                            <h3>Rezension</h3> 
+                            <p>&nbsp;Hier kannst du eine Rezension zum ausgewählten Abonnement abgeben</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                                                    &nbsp;
+                        </li>                                                                                                                                                                                                                                                    &nbsp;
                         <li>&nbsp;Ihre Rezension &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -72,7 +72,7 @@
                                     </div>
                                     <div class="row text-right">
                                         <div class="col-xs-12 col-sm-12 text-right col-md-12 col-lg-12"> 
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Senden</button>
                                         </div>
                                     </div>                                     
