--- a/LeckerBag/WebContent/9_lieferant_rezension_alle.html
+++ b/LeckerBag/WebContent/9_lieferant_rezension_alle.html
@@ -19,19 +19,19 @@
 		</script>         
     </head>     
     <body> 
-        <div class="row" id="header"></div>         
-        <div class="row" data-pg-collapsed>
+        <div class="row" id="header"></div>
+        <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
                     <div class="row" data-pg-collapsed="">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Meine Rezensionen</h3> 
-                            <p>Hier können Sie alle eingegangen Rezensionen einsehen</p>
+                            <p>Hier kannst du alle eingegangen Rezensionen einsehen</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -72,7 +72,7 @@
                                                         </div>
                                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                             <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                            <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                            <h5><strong>Kunde:</strong> <a>Heike Schmidt</a> | <strong>Datum:</strong> 21.04.2015</h5> 
                                                             <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind wir nun mit<a>(mehr)</a></p>
                                                         </div>
                                                     </div>                                                     
@@ -90,7 +90,7 @@
                                                         </div>
                                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                                             <h4>Abonnement ist grandios &amp; lecker!</h4>
-                                                            <h5><strong>Kunde:</strong> <a>Maria Müller</a> | <strong>Datum:</strong> 21.04.2015</h5> 
+                                                            <h5><strong>Kunde:</strong> <a>Max Mustermann</a> | <strong>Datum:</strong> 21.04.2015</h5> 
                                                             <p>Ich kann über Müllerbäck nichts schlechtes berichten. Die Bags sind immer frisch, pünktlich und lecker. Nachdem wir zuvor unsere Bags von einem anderen Lieferanten bezogen haben, welcher aber keine Mehrkornbrötchen angeboten hat sind wir nun mit<a>(mehr)</a></p>
                                                         </div>
                                                     </div>                                                     
@@ -158,7 +158,7 @@
                     </div>
                 </div>                 
             </div>
-        </div>         
+        </div>                  
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
         <script>
