--- a/LeckerBag/WebContent/Konfigurator_Seite2.html
+++ b/LeckerBag/WebContent/Konfigurator_Seite2.html
@@ -32,7 +32,7 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -47,6 +47,17 @@
                             <font>Produktangebot</font>
                         </li>                         
                     </ol>
+                    <div class="row konfig_schrittzaehler" data-pg-collapsed>
+                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" data-pg-collapsed>
+                            <p>Schritt 2/2</p> 
+                        </div>
+                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" data-pg-collapsed>
+                            <div class="progress"> 
+                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"> 
+</div>                                 
+                            </div>                             
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
@@ -167,7 +178,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="row pg-empty-placeholder">
+                                    <div class="row">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right" data-pg-collapsed>
                                             <button type="button" class="btn btn-default button_paulo button_paulo_3">Abbrechen</button>
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='mein_profil_lieferant.html'">Fertig</button>                                             
