--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -58,14 +58,14 @@
                             <p>Herzlich Willkommen <font class="beschreibung">Martin Müller - MüllerBäck!</font></p> 
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie Hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
                     <div class="row">
-                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col" data-pg-collapsed>
+                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Mein Profil</h4>
@@ -84,13 +84,13 @@
                                     <h5>Ihre Lieferorte</h5>
                                     <ul class="pg-empty-placeholder" data-pg-collapsed>
                                         <li class="list_text">
-                                            <a>Lieferort hinzufügen</a>
+                                            <a href="schulen_bearbeiten_lieferant.html">Lieferort hinzufügen</a>
                                         </li>
                                         <li class="list_text">
                                             <a>Lieferort(e) ansehen</a>
                                         </li>
                                         <li class="list_text">
-                                            <a color="#5b586b">Lieferort(e) bearbeiten</a>
+                                            <a color="#5b586b" href="mein_profil_lieferant.html">Lieferort(e) bearbeiten</a>
                                         </li>
                                     </ul>
                                     <h5>Ihre Produkte</h5>
@@ -135,7 +135,7 @@
                                             <p data-pg-collapsed><strong>Abonnement ist grandios!</strong></p>
                                         </div>
                                         <div class="col-md-12 col-lg-12" data-pg-collapsed> 
-                                            <p><strong>Kunde:</strong> <a href="#">Bob Brown</a> | <strong>Datum:</strong> 21.08.15 | <strong>Rezension:</strong>
+                                            <p><strong>Kunde:</strong> <a href="#">Heike Schmidt</a> | <strong>Datum:</strong> 21.08.15 | <strong>Rezension:</strong>
 Ich kann über Müllerbäck nichts schlechtes berichten.
     Die Bags sind immer frisch, pünkltich und ... <a href="#">(mehr)</a></p> 
                                         </div>
@@ -152,7 +152,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                             <p data-pg-collapsed><strong>Lecker, pünktlich und gut!</strong></p>
                                         </div>
                                         <div class="col-md-12 col-lg-12"> 
-                                            <p><strong>Kunde:</strong> <a href="#">Bob Brown</a> | <strong>Datum:</strong> 21.08.15 | <strong>Rezension:</strong>
+                                            <p><strong>Kunde:</strong> <a href="#">Max Mustermann</a> | <strong>Datum:</strong> 21.08.15 | <strong>Rezension:</strong>
 Ich kann über Müllerbäck nichts schlechtes berichten.
     Die Bags sind immer frisch, pünkltich und ... <a href="#">(mehr)</a></p> 
                                         </div>
@@ -208,7 +208,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12 dash_element_ext_meine_details">
                                     <h4>Meine weiteren Deitails</h4>
-                                    <div class="row pg-empty-placeholder">
+                                    <div class="row">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                                             <select class="form-control" id="meine_details" data-pg-name="Dropdown: Geschlecht">
                                                 <option value="1">Meine Stornierungen</option>
@@ -281,14 +281,14 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                         <td>Kind ist krank</td>                                                         
                                                     </tr>
                                                     <tr data-pg-collapsed=""> 
-                                                        <td>Bob Brown</td>                                                         
+                                                        <td>Heike Schmidt</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
                                                         </td>                                                         
                                                         <td>
                                                             <a href="#">20060321</a>
                                                         </td>                                                         
-                                                        <td>Mikael Brown</td>
+                                                        <td>Lena Schmidt</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
                                                         <td>Bag wird abgeholt</td>                                                         
