--- a/LeckerBag/WebContent/index.html
+++ b/LeckerBag/WebContent/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -18,11 +18,11 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>       
+		</script>         
     </head>     
     <body>
-    <div class="row" id="header"></div>                
-        <div class="row" data-pg-collapsed>
+        <div class="row" id="header"></div>         
+        <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
                     <div class="row" id="startseite_c0" data-pg-collapsed>
@@ -31,12 +31,12 @@
                         </div>
                     </div>
                     <div class="row" id="startseite_c1">
-                        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" data-pg-collapsed>
+                        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
                             <h1 class="text-center" id="uberschrift_c1">Entdecke LeckerBag, deine Pausenzeit</h1>
                             <hr id="hr_c1">                             
-                            <p class="MsoNormal text-center" id="lauftext_c1" data-pg-collapsed=""><font style="font-weight:500">LeckerBag</font> ist Deutschlands erster frühstücks Lieferservice <font style="font-weight:500">speziell für Schulkinder.</font><br>Ausgewählte Bäckereien liefern Deinem Kind ein
-								individuelles und gesundes Frühstück.<br>Bestelle online und Dein Kind
-								erhält sein Frühstück <font style="font-weight:500">täglich frisch</font>, direkt in der teilnehmenden Schule.</p>
+                            <p class="MsoNormal text-center" id="lauftext_c1" data-pg-collapsed=""><font style="font-weight:500">LeckerBag</font> ist Deutschlands erster Frühstückslieferservice <font style="font-weight:500">speziell für Schüler.</font><br>Ausgewählte Bäckereien liefern deinem Kind ein
+								individuelles und gesundes Frühstück.<br>Bestelle online und dein Kind
+								erhält sein Frühstück <font style="font-weight:500">täglich frisch</font>, direkt in die Schule.</p>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 text-center">
                             <button type="button" class="btn btn-default button_paulo">Erfahre mehr</button>
@@ -44,29 +44,29 @@
                         </div>
                     </div>
                     <div class="row" id="startseite_c2"></div>
-                    <div class="row" id="startseite_c3" data-pg-collapsed>
+                    <div class="row" id="startseite_c3">
                         <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
                             <h2 class="text-center" id="uberschrift_c3">Unser Prinzip - so funktionierts</h2> 
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-star">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">1.</font> Wähle eine Bäckerei<br> in Deiner Nähe aus</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">1.</font> Wähle eine Bäckerei<br> in deiner Nähe aus</p>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-cutlery">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">2.</font> Stelle für Dein Kind<br> individuelle Bags zusammen&nbsp;</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">2.</font> Stelle für dein Kind<br> individuelle Bags zusammen&nbsp;</p>
                             <br>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-calendar-o">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">3.</font> Wann soll Dein Kind<br> die LeckerBags erhalten</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">3.</font> Wann soll dein Kind<br> die LeckerBags erhalten</p>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-thumbs-o-up">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">4.</font> Ihr Kind,<br> gut versorgt mit &nbsp;Leckerbag&nbsp;</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">4.</font>  Dein Kind, gut versorgt mit &nbsp;Leckerbag&nbsp;</p>
                             <br>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                     <div class="row" id="startseite_c5">
                         <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
                             <h4 id="uberschrift_c5">Wissenswertes</h4>
-                            <p id="lauftext_c5">Hier erfährst du täglich Neuigkeiten aus rund um die Themen gesunde Ernährung, Kinder-Frühstück und LeckerBag</p>
+                            <p id="lauftext_c5">Hier erfährst du täglich Neues rund um die Themen gesunde Ernährung, Frühstück und LeckerBag</p>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4" data-pg-collapsed>
                             <img src="pics/startseite_0.jpg" width="100%">
@@ -129,9 +129,9 @@
             </div>
         </div>
         <div class="row" id="footer"></div>
-        <!-- Ende des Dokumentes -->                    
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>        
+        <!-- Ende des Dokumentes -->         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>
-        <script src="js/startseite_kommentare_carousel.js"></script>       
+        <script src="js/startseite_kommentare_carousel.js"></script>         
     </body>     
 </html>
