--- a/LeckerBag/WebContent/login.html
+++ b/LeckerBag/WebContent/login.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -27,10 +27,10 @@
         			location.href='dashboard_lieferant.html';
         		}
         	};
-		</script>                  
+		</script>         
     </head>     
     <body>
-    <div class="row" id="header"></div>                  
+        <div class="row" id="header"></div>         
         <div class="row" data-pg-collapsed>
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -40,9 +40,9 @@
                             <p><br></p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -56,12 +56,12 @@
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element">
                                     <div class="row" style="margin-bottom: 30px">
-                                        <h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51); margin-top: 10px;">Melden Sie sich in Ihrem Account an</h4>
+                                        <h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51); margin-top: 10px;">Melde dich in deinem Account an</h4>
                                         <hr style="padding-bottom: 25px" class="hr_line">
                                         <input type="text" class="form-control" placeholder="E-Mail Adresse" style="margin-bottom: 25px" data-pg-name="E-Mail Adresse" id="login_mail">
                                         <input type="text" class="form-control" placeholder="Passwort" style="margin-bottom: 25px" data-pg-name="Passwort">
-                                        <label data-pg-collapsed class=""> 
-                                            <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;Angemeldet bleiben &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                                        <label data-pg-collapsed> 
+                                            <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;Angemeldet bleiben &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
                                         </label>
                                     </div>
                                     <div class="row">
@@ -91,8 +91,8 @@
             </div>
         </div>         
         <!-- Ende des Dokumentes -->         
-        <div class="row" id="footer"></div> 
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
-        <script src="js/functions.js"></script>      
+        <div class="row" id="footer"></div>         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script src="js/functions.js"></script>         
     </body>     
 </html>
