--- a/LeckerBag/WebContent/profil_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/profil_bearbeiten_lieferant.html
@@ -30,7 +30,7 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
