--- a/LeckerBag/WebContent/profil_geloescht_kind.html
+++ b/LeckerBag/WebContent/profil_geloescht_kind.html
@@ -7,13 +7,13 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-    	<!-- Scheduler -->
+        <!-- Scheduler -->
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -29,12 +29,12 @@
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                            <h3>Kind gelöscht</h3>
+                            <h3>Kind entfernt</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -43,8 +43,8 @@
                             <div class="row dash_element_holder">
                                 <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="text-center div_profil_geloescht">
-                                        <h4>Kind wurde gemäß Ihrem Wunsch entfernt!</h4>
-                                        <h4>Falls Sie es sich dennoch anders überlegt haben, können Sie Ihr Kind gerne erneut hinzufügen.</h4>
+                                        <h4>Kind wurde gemäß deinem Wunsch entfernt!</h4>
+                                        <h4>Falls du es dir dennoch anders überlegt hast, kannst du dein Kind gerne erneut hinzufügen.</h4>
                                     </div>
                                     <div class="col-sm-6 col-xs-6 col-lg-12 col-md-12 text-right last_element_dash div_buttons button_3">
                                         <button class="button_paulo button_paulo_3" name="abbrechen" onclick="location.href='kind_bearbeiten.html'">Hinzufügen</button>
@@ -57,9 +57,9 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer"></div>          
+        <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>        
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
