--- a/LeckerBag/WebContent/profil_geloescht_kunde.html
+++ b/LeckerBag/WebContent/profil_geloescht_kunde.html
@@ -7,13 +7,13 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-    	<!-- Scheduler -->
+        <!-- Scheduler -->
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -21,10 +21,10 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>             
+		</script>         
     </head>     
     <body>
-    	<div class="row" id="header"></div>               
+        <div class="row" id="header"></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -33,9 +33,9 @@
                             <h3>Profil entfernt</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -44,8 +44,8 @@
                             <div class="row dash_element_holder">
                                 <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <div class="text-center div_profil_geloescht" data-pg-collapsed>
-                                        <h4 class="text-center">Ihr Profil wurde gemäß Ihrem Wunsch entfernt!</h4>
-                                        <h4 class="text-center">Falls Sie es sich dennoch anders überlegt haben, können Sie sich gerne erneut registrieren.</h4>
+                                        <h4 class="text-center">Dein Profil wurde gemäß deinem Wunsch entfernt!</h4>
+                                        <h4 class="text-center">Falls du es dir dennoch anders überlegt hast, kannst du dich gerne erneut registrieren</h4>
                                     </div>
                                     <div class="col-sm-6 col-xs-6 col-lg-12 col-md-12 text-right last_element_dash div_buttons button_3">
                                         <button class="button_paulo btn btn_default btn_editprofil" onclick="location.href='registrierung.html'">Registrierung</button>
@@ -60,7 +60,7 @@
         </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>          
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
