--- a/LeckerBag/WebContent/registrierung.html
+++ b/LeckerBag/WebContent/registrierung.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -18,7 +18,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body>
         <div class="row" id="header"></div>         
@@ -31,9 +31,9 @@
                             <p>Erstelle deinen LeckerBag-Account</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -65,7 +65,7 @@
                                     <div class="row">
                                         <div class="col-md-12 col-xs-11 col-sm-12 col-lg-12"> 
                                             <label style="margin-top: 10px; margin-bottom: 15px" data-pg-name="Checkbox: AGBs" data-pg-collapsed=""> 
-                                                <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;Ich bestätige, die AGB der Firma "LeckerBag"
+                                                <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;Ich bestätige, die AGB der Firma "LeckerBag"
                                             </label>                                             
                                         </div>
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-right last_element_dash div_buttons"> 
@@ -81,7 +81,7 @@
         </div>         
         <div class="row" id="footer"></div>
         <!-- Ende des Dokumentes -->         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
