--- a/LeckerBag/WebContent/suche.html
+++ b/LeckerBag/WebContent/suche.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -18,7 +18,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>             
+		</script>         
     </head>     
     <body>
         <div class="row" id="header"></div>         
@@ -31,9 +31,9 @@
                             <p>Bäcker &amp; Schulen in deiner Umgebung</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a id="help_text">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -41,17 +41,17 @@
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element col-xs-12 col-sm-12 col-lg-12">
-                                    <h4 style="margin-bottom:15px">Wonach möchten Sie suchen?</h4>
+                                    <h4 style="margin-bottom:15px">Wonach möchtest du suchen?</h4>
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                         <div class="radio" style=" margin-bottom:15px" data-pg-name="Radio: Suchkriterium" data-pg-collapsed>
                                             <div class="row" data-pg-name="Row: Bäcker" data-pg-collapsed>
                                                 <label class="control-label">
-                                                    <input type="radio" name="group" value="option1" checked="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    Bäckereien
+                                                    <input type="radio" name="group" value="option1" checked="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            Bäckereien
                                                 </label>
                                             </div>
                                             <div class="row" data-pg-name="Row: Schule" data-pg-collapsed>
                                                 <label class="control-label"> 
-                                                    <input type="radio" name="group" value="option1" checked="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    Schulen &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                                                    <input type="radio" name="group" value="option1" checked="">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            Schulen &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
                                                 </label>
                                             </div>                                             
                                         </div>                                         
@@ -74,7 +74,7 @@
         </div>         
         <div class="row" id="footer"></div>
         <!-- Ende des Dokumentes -->         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
