--- a/LeckerBag/WebContent/2_uebersicht_abo.html
+++ b/LeckerBag/WebContent/2_uebersicht_abo.html
@@ -26,12 +26,12 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Meine Abonnements</h3> 
-                            <p>&nbsp;</p>
+                            <p>Eine Übersicht deiner aktuellen Abonnements</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -61,8 +61,9 @@
                         <div class="col-xs-12 col-md-4 col-lg-4 col-sm-4">
                             <h4>Kinder<br></h4>
                             <select class="form-control">
-                                <option>Hans-Jürgen</option>
-                                <option>Peter</option>                                 
+                                <option>Arnold</option>
+                                <option>Bernadette</option>
+                                <option>Heino</option>                                 
                             </select>
                             <div class="clearfix clear-columns"></div>
                         </div>
@@ -76,11 +77,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Arnold</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Sandertorbäck</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -116,11 +117,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Bernadette</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Rösner Backstube</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -156,11 +157,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Heino</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Webers Bäckereiladen</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
