--- a/LeckerBag/WebContent/3_details_bestellung.html
+++ b/LeckerBag/WebContent/3_details_bestellung.html
@@ -26,12 +26,12 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Details zur Bestellung</h3> 
-                            <p>Hier können Sie die Details der ausgewählten Bestellung einsehen<br></p>
+                            <p>Hier kannst du die Details der ausgewählten Bestellung einsehen<br></p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line">
@@ -44,7 +44,7 @@
                         </li>
                         <li>&nbsp;
                             <a href="1_details_abo.html">Details des Abonnements&nbsp;</a>
-                        </li>                                                                                                                            &nbsp;
+                        </li>                                                                                                                                                                            &nbsp;
                         <li>&nbsp;Details zur Bestellung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -111,18 +111,18 @@
                                                     <i class="fa fa-lg fa-info-circle logo_info"></i> 
                                                 </div>
                                                 <div class="col-md-11 col-lg-11 col-sm-11 col-xs-11">
-                                                    <p>Das Bestellung kann noch bis zum 28.04.2015 neu konfiguriert werden.<br></p>
+                                                    <p>Die Bestellung kann noch bis zum 28.04.2015 neu konfiguriert werden.<br></p>
                                                 </div>
                                                 <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1 text-right">
                                                     <i class="fa fa-info-circle fa-lg logo_info"></i> 
                                                 </div>
                                                 <div class="col-md-11 col-lg-11 col-sm-11 col-xs-11">
-                                                    <p>Das Bestellung kann noch bis zum 29.04.2015 storniert werden.<br></p>
+                                                    <p>Die Bestellung kann noch bis zum 29.04.2015 storniert werden.<br></p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
+                                            <button type="button" class="button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
                                             <button type="button" class="button_paulo">Drucken</button>
                                         </div>
                                     </div>                                     
