--- a/LeckerBag/WebContent/5_stornierung_abo.html
+++ b/LeckerBag/WebContent/5_stornierung_abo.html
@@ -25,13 +25,13 @@
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                            <h3>Ihre Kündigung</h3> 
-                            <p>&nbsp;Hier können Sie das ausgewählte Abonnement kündigen</p>
+                            <h3>Kündigung</h3> 
+                            <p>&nbsp;Hier kannst du das ausgewählte Abonnement kündigen</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a id="help_text" class="hidden-xs">benötigen Sie hilfe?</a>
+                            <a id="help_text" class="hidden-xs">Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -41,8 +41,8 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                                                                &nbsp;
-                        <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
+                        </li>                                                                                                                                                                                                                                                                                                                                                        &nbsp;
+                        <li>&nbsp;Kündigung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
@@ -58,22 +58,22 @@
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                                             <h4>Details zum Lieferanten<br></h4> 
-                                            <p>Name: Bäcker Bob<br></p>
+                                            <p>Name: Sandertorbäck<br></p>
                                             <p>Straße: Sanderstraße 12<br></p>
                                             <p>Postleitzahl: 97072 Würzburg<br></p>
                                             <p class="hidden-xs"><br></p>
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12" data-pg-collapsed>
                                             <h4>Details zum Kunden<br></h4> 
-                                            <p>Name Maria Müller<br></p>
+                                            <p>Name: Heike Schmidt<br></p>
                                             <p>Straße: Weingartenstraße 31<br></p>
                                             <p>Postleitzahl: 97072 Würzburg<br></p>
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12" data-pg-collapsed>
                                             <h4>Details zum Kind</h4> 
-                                            <p>Name: Hans-Jürgen<br></p>
-                                            <p>Schule: Grimm Schule<br></p>
-                                            <p>Klasse: 2a</p>
+                                            <p>Name: Lena<br></p>
+                                            <p>Schule: Grundschule-Süd<br></p>
+                                            <p>Klasse: 2b</p>
                                         </div>
                                     </div>
                                     <div class="row" data-pg-collapsed>
@@ -105,7 +105,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Kündigen</button>
                                         </div>
                                     </div>                                     
