--- a/LeckerBag/WebContent/bestellung_kunde.html
+++ b/LeckerBag/WebContent/bestellung_kunde.html
@@ -9,11 +9,11 @@
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="css/datepicker.css" rel="stylesheet" type="text/css">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script type="text/javascript" src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>    
+        <script type="text/javascript" src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>         
         <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script> 
 			$(function(){
@@ -36,9 +36,9 @@
                             <p>Erstelle deine LeckerBags</p> 
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie Hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -50,7 +50,7 @@
                             <font>Bestellung - Schritt 1</font>
                         </li>                         
                     </ol>
-                    <div class="row" data-pg-collapsed>
+                    <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
@@ -65,10 +65,10 @@
                                             </div>                                             
                                         </div>
                                     </div>
-                                    <div class="row" data-pg-collapsed>
-                                        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12" data-pg-collapsed>
+                                    <div class="row">
+                                        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
                                             <div class="form-group" data-pg-collapsed> 
-                                                <label class="control-label" for="formInput43">Welches Abonnement hätten Sie gerne?</label>                                                 
+                                                <label class="control-label" for="formInput43">Welches Abonnement hättest du gerne?</label>                                                 
                                                 <select id="formInput43" class="form-control"> 
                                                     <option>7-Tage Abonnement</option>                                                     
                                                     <option>14-Tage Abonnement</option>                                                     
@@ -102,7 +102,7 @@
                                     <div class="row" id="bestellung_lieferantholder">
                                         <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
                                             <div class="form-group" data-pg-collapsed id="typahead_holder"> 
-                                                <label class="control-label" for="baecker_input">Welcher Lieferant soll Sie beliefern?</label>                                                 
+                                                <label class="control-label" for="baecker_input">Welcher Lieferant soll dein Kind beliefern?</label>                                                 
                                                 <input type="text" class="form-control baecker_typeahead" id="baecker_input" placeholder="Ort - Bäckereiname" oninput="UserLooking()">
                                             </div>
                                             <p class="form-control form-control_ext_bestellung" data-pg-collapsed><strong>Adressdaten:</strong></p>
@@ -143,7 +143,7 @@
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>         
         <!-- Ende des Dokumentes -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>   
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/bootstrap-datepicker.js"></script>         
         <script src="js/functions.js"></script>
         <script src="js/kunde_maps_bestellung.js"></script>
