--- a/LeckerBag/WebContent/mein_profil_lieferant.html
+++ b/LeckerBag/WebContent/mein_profil_lieferant.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -25,14 +25,14 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
-                    <div class="row" data-pg-collapsed>
-                        <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed>
+                    <div class="row">
+                        <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Mein Profil</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -52,6 +52,9 @@
                                         <h4>Meine persönlichen Daten</h4> 
                                     </div>
                                     <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6">
+                                        <button type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" data-pg-collapsed onclick="location.href='profil_einstellungen_lieferant.html'">
+                                            <i class="glyphicon glyphicon-cog"></i>
+                                        </button>
                                         <button id="btn_profil_lieferant_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilLieferant(false)" data-pg-collapsed>
                                             <i class="glyphicon glyphicon-pencil"></i>
                                         </button>
@@ -176,8 +179,8 @@
             </div>
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
-        <script src="js/edit_save_profil.js"></script>  
+        <script src="js/edit_save_profil.js"></script>         
     </body>     
 </html>
