--- a/LeckerBag/WebContent/profil_kind.html
+++ b/LeckerBag/WebContent/profil_kind.html
@@ -7,13 +7,13 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-    	<!-- Scheduler -->          
+        <!-- Scheduler -->         
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -35,7 +35,7 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -115,12 +115,12 @@
                                         </div>                                         
                                     </div>
                                     <div class="row">
-										<div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
-										    <h4>Ihre nächsten Lieferungen</h4>
-										    <div class="row">
-										        <div id="scheduler_profil_kind"></div>
-										    </div>     
-										</div>
+                                        <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
+                                            <h4>Die nächsten Lieferungen</h4>
+                                            <div class="row">
+                                                <div id="scheduler_profil_kind"></div>
+                                            </div>                                             
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -169,9 +169,9 @@
         			});
         		}
         	);
-        </script>       
-        <!-- Ende des Dokumentes -->                
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>      
+        </script>         
+        <!-- Ende des Dokumentes -->         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>
         <script src="js/edit_save_profil.js"></script>
     </body>     
