--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -24,7 +24,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body>
         <div class="row" id="header" data-pg-collapsed></div>         
@@ -38,7 +38,7 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>Benötigst du Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -139,7 +139,7 @@
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>
         <!-- Ende des Dokumentes -->         
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>          
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
         <script src="js/lieferant_maps_schulauswahl.js"></script>         
     </body>     
